--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "heroicons": "^2.1.3",
+    "mongoose": "^8.4.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
