--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "heroicons": "^2.1.3",
     "mongoose": "^8.4.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "stripe": "^15.8.0"
   },
   "devDependencies": {
     "eslint": "^8",
